Added a string resource with text for the textView in the about activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Project</string>
+    <string name="AboutText">Denna app är riktad till konst-inresserade. Här listas konstvärldens främsta verk!</string>
 </resources>
